common-applications/test-environment/openeuler-meetingserver-v2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: meetingserver-ingress
  namespace: openeuler-meetingserver
spec:
  rules:
  - host: meetings-beta.openeuler.org
    http:
      paths:
      - backend:
          serviceName: meeting-service
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - meetings-beta.openeuler.org
    secretName: meetingserver-tls
